# elmneuron

./: 2306.16922v3.md  CHAOS_ANALYSIS_README.md  CLAUDE.md  INSTALL.md  MANIFEST.in  README.md  methods_summary.md  pyproject.toml  requirements.txt
notebooks/: compute_lyapunov_spectrum.ipynb  neuronio_train_script.py  train_elm_on_lra.ipynb  train_elm_on_mnist.ipynb  train_elm_on_neuronio.ipynb  train_elm_on_shd.ipynb  train_elm_on_wikitext.ipynb
papers/: 2010-Boedecker-InfoProcessingEchoStateNets.md  PhysRevResearch.5.043044.md  PhysRevX.2.041007.md
src/: analyze_chaos_elm.py  expressive_leaky_memory_neuron.py  expressive_leaky_memory_neuron_v2.py  lyapunov_spectrum.py  test_chaos_methods.py
src/elm_neuron/: expressive_leaky_memory_neuron.py  expressive_leaky_memory_neuron_v2.py
src/elmneuron/: __init__.py  expressive_leaky_memory_neuron_v2.py  modeling_utils.py
src/elmneuron/callbacks/: __init__.py  visualization_callbacks.py
src/elmneuron/datasets/: __init__.py  text_datamodule.py  vision_datamodule.py
src/elmneuron/lra/: __init__.py  lra_datamodule.py
src/elmneuron/neuronio/: __init__.py  neuronio_data_loader.py  neuronio_datamodule.py  neuronio_viz_utils.py
src/elmneuron/shd/: __init__.py  shd_datamodule.py
src/elmneuron/tasks/: __init__.py  classification_task.py  neuronio_task.py  regression_task.py
src/elmneuron/transforms/: __init__.py  routing.py  sequentialization.py
tests/: test_callbacks.py  test_datamodules.py  test_elm_models.py  test_lra_datamodules.py  test_refactored_elm.py  test_text_datamodules.py  test_vision_datamodules.py
