[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elmneuron"
version = "0.1.0"
description = "Expressive Leaky Memory (ELM) neuron: an efficient and expressive phenomenological model of cortical neurons"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Aaron Spieler"},
]
maintainers = [
    {name = "Aaron Spieler"},
]
keywords = [
    "neuroscience",
    "neural-networks",
    "spiking-neural-networks",
    "computational-neuroscience",
    "pytorch",
    "biophysical-modeling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

# Dependencies are read dynamically from requirements.txt
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pre-commit>=3.0.0",
]
wandb = [
    "wandb>=0.15.0",
]
vision = [
    "torchvision>=0.15.0",
    "pillow>=9.0.0",
]
text = [
    "transformers>=4.30.0",
    "tokenizers>=0.13.0",
    "datasets>=2.12.0",
]
neuronio = [
    # NeuronIO-specific requirements (if any beyond core)
]
gpu = [
    "torch>=2.0.0",  # GPU-enabled PyTorch requires specific installation
]
all = [
    "elmneuron[dev,wandb,vision,text,neuronio]",
]

[project.urls]
Homepage = "https://github.com/AaronSpieler/elmneuron"
Repository = "https://github.com/AaronSpieler/elmneuron"
Documentation = "https://github.com/AaronSpieler/elmneuron/blob/main/README.md"
"Bug Tracker" = "https://github.com/AaronSpieler/elmneuron/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["elmneuron*"]
exclude = ["tests*", "notebooks*"]

[tool.setuptools.package-data]
elmneuron = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
